# unique-types

./: Cargo.toml  Justfile  README.md
unique-types/: Cargo.toml
unique-types/examples/: reuse.rs  thread_local.rs  types.rs
unique-types/src/: lib.rs  lifetime.rs  macros.rs  marker_type.rs  marker_type_tl.rs  reusable_runtime.rs  reuse.rs  runtime.rs  unchecked.rs  unique_indices.rs
ut-arena/: Cargo.toml
ut-arena/benches/: workloads.rs
ut-arena/src/: dense_slab.rs  dense_slotmap.rs  dense_tracker.rs  generation.rs  generic.rs  generic_dense.rs  generic_sparse.rs  internal_index.rs  key.rs  key_hash.rs  lib.rs  polyfill.rs  slab.rs  slotmap.rs
ut-arena/tests/: proptest.rs  sparse_arena.rs
ut-cell/: Cargo.toml
ut-cell/examples/: lifetime.rs  slice.rs
ut-cell/src/: lib.rs  load_all.rs
ut-cell/tests/: graph.rs
ut-vec/: Cargo.toml
ut-vec/src/: lib.rs
