[package]
name = "ut-arena"
version = "0.1.0"
edition = "2021"

[features]

default = ["unique-types"]

unique-types = ["dep:unique-types", "ut-vec/unique-types"]

[dependencies]
unique-types = { path = "../unique-types", optional = true }
ut-vec = { path = "../ut-vec" }

[dev-dependencies]
rand = "0.8"
scopeguard = "1"
rustc-hash = "1"

criterion = "0.5"

slab = "0.4"
slotmap = "1"

[[bench]]
name = "workloads"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
