[package]
name = "ut-arena"
version = "0.1.0"
edition = "2021"

[features]

default = ["unique-types"]

unique-types = ["dep:unique-types", "ut-vec/unique-types"]

[dependencies]
unique-types = { path = "../unique-types", optional = true }
ut-vec = { path = "../ut-vec" }

[dependencies.init]
git = "https://github.com/RustyYato/init.git"
optional = true

[dev-dependencies]
rand = "0.9"
scopeguard = "1"
rustc-hash = "2"

criterion = "0.6"

slab = "0.4"
slotmap = "1"

[[bench]]
name = "workloads"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
